CheckBox Mask bleeding fixed (looks perfect now :) ) + minor CSS fixes

--- a/STYL/UI/App/Login.styl
+++ b/STYL/UI/App/Login.styl
@@ -37,7 +37,7 @@ div.login
     line-height 37px
     padding 0
 
-  transition-property transform
+  transition-property -webkit-transform
   transition-duration 500ms
   transform translate3d(0, 0, 0)
 
