--- a/STYL/UI/App/Splash.styl
+++ b/STYL/UI/App/Splash.styl
@@ -4,12 +4,12 @@ div.splash
   z-index 20
   expand()
 
-  transition-property transform
+  transition-property -webkit-transform
   transition-duration 500ms
   transform translate3d(0, 0, 0)
 
-  background-size cover
   background-repeat no-repeat
+  background-size 100% 100%
   background-image url(../Images/Splash.jpg)
 
   &.fade
