--- a/STYL/UI/Core/Forms.styl
+++ b/STYL/UI/Core/Forms.styl
@@ -108,85 +108,85 @@ textarea.autogrow
 
 // Checkbox, losely based on http://vxjs.org/switch.html
 .checkbox
-  position relative
-  float right
-  height 28px
-  width 77px
   margin-top -6px
-
   border 1px solid #979797
   border-radius 20px
-  -webkit-mask-image url(../Images/CheckBoxMask.png)
-  -webkit-mask-size 77px 28px
-  box-shadow inset 0 1px 3px #BABABA, inset 0 12px 3px 2px rgba(232, 232, 232, 0.5)
-  cursor pointer
-  overflow hidden
 
-  input[type=checkbox]
-    display none
-
-  & > .left
-    z-index 2
-    position absolute
-    top 0
-    bottom 0
-    left 0
-    right 0
-
-    transition-duration 200ms
-    transition-timing-function ease-in-out
-    transform translate3d(-100%, 0, 0)
-
-    border-top-right-radius 0
-    border-bottom-right-radius 0
-
-    box-shadow inset 0 1px 2px #333, inset 0 12px 3px 2px rgba(104, 104, 104, 0.50)
-    background-color #333
-
-  & > .thumb
-    z-index 3
+  > div
     position relative
-    width 26px
-    height 26px
-    top 0
-    display block
-    font-size 0.9em
+    height 28px
+    width 77px
 
-    transition-duration 200ms
-    transition-timing-function ease-in-out
-    transform translate3d(0, 0, 0)
+    border-radius 20px
+    -webkit-mask-image url(../Images/CheckBoxMask.png)
+    -webkit-mask-size 77px 28px
+    box-shadow inset 0 1px 3px #bababa, inset 0 12px 3px 2px rgba(232, 232, 232, 0.5)
+    cursor pointer
+    overflow hidden
 
-    border solid 1px #919191
-    border-radius 50%
+    input[type=checkbox]
+      display none
 
-    box-shadow inset 0 2px 1px white, inset 0 -2px 1px white
-    background-color #CECECE
-    background-image linear-gradient(top, #CECECE, #FBFBFB)
-
-    &:before
-      content attr(data-on)
+    & > .left
+      z-index 2
       position absolute
-      top 4px
-      left -70px
+      top 0
+      bottom 0
+      left 0
       right 0
-      color #fff
-      font-weight bold
-      text-align center
-      text-shadow rgba(0, 0, 0, 0.5) 0 -1px 0
 
-    &::after
-      content attr(data-off)
-      position absolute
-      top 4px
-      left 33px
-      right 0
-      color #888
-      text-align center
-      font-weight bold
+      transition -webkit-transform 200ms ease-in-out
+      transform translate3d(-100%, 0, 0)
 
-  &:hover > .thumb
-    box-shadow inset 0 2px 1px #fff, inset 0 -2px 1px #fff
-    background-image none
+      border-top-right-radius 0
+      border-bottom-right-radius 0
+
+      box-shadow inset 0 1px 2px #333, inset 0 12px 3px 2px rgba(104, 104, 104, 0.50)
+      background-color #333
+
+    & > .thumb
+      z-index 3
+      position relative
+      width 26px
+      height 26px
+      top 0
+      display block
+      font-size 0.9em
+
+      transition -webkit-transform 200ms ease-in-out
+      transform translate3d(0, 0, 0)
+
+      border solid 1px #919191
+      border-radius 50%
+
+      box-shadow inset 0 2px 1px white, inset 0 -2px 1px white
+      background-color #cecece
+      background-image linear-gradient(top, #cecece, #fbfbfb)
+
+      &:before
+        content attr(data-on)
+        position absolute
+        top 5px
+        left -70px
+        right 0
+        color #fff
+        font-weight bold
+        text-align center
+        text-shadow rgba(0, 0, 0, 0.5) 0 -1px 0
+
+      &::after
+        content attr(data-off)
+        position absolute
+        top 5px
+        left 33px
+        right 0
+        color #888
+        text-align center
+        font-weight bold
+
+    &:hover > .thumb
+      box-shadow inset 0 2px 1px #fff, inset 0 -2px 1px #fff
+      background-image none
 
 // Select
 select.empty
